overflow fix

--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -200,6 +200,8 @@ html:not(.is-native-android) {
 html {
   /* FIXME: rewrite revealjs.css ? */
   height: unset !important;
+
+  overflow: hidden;
 }
 
 body {
